# atrox3d-project

./: .gitignore  README.md  pyproject.toml  run-tests  test.py  test_flags.py  testmain.py
atrox3d/: normalize.py
atrox3d/gitfiles/: __main__.py  gitfiles.py
atrox3d/helpers/: logformatconfigitem.py  logger.py  loggerformat.py  loggersettings.py
atrox3d/helpers/logger/: constants.py  defaults.py  logformatconfigitem.py  logger.py  loggerformat.py  loggerformatbuilder.py  loggersettings.py
atrox3d/logging/: logmanager.py
atrox3d/modules/: parser.py
atrox3d/normalizer/: __init__.py  __main__.py  normalizer.py
atrox3d/simplegit/: __init__.py  __main__.py  _options.py  cloner.py  exceptions.py  git.py  git_command.py  git_helper.py  repo.py  repos.py  status.py
src/atrox3d/gitfiles/: __main__.py  gitfiles.py
src/atrox3d/helpers/logger/: defaults.py  loggerformatbuilder.py
src/atrox3d/logger/: logmanager.py  modulelogging.py
src/atrox3d/normalizer/: __main__.py  parser.py
src/atrox3d/simplegit/: __main__.py  git.py  git_command.py  repos.py
tests/: test_logging.py
tests/logger/: test_logmanager.py  test_modulelogging.py
