[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atrox3d"
version ="1.0.0"

[project.scripts]
normalize = "atrox3d.normalizer.__main__:main"
gitfiles = "atrox3d.gitfiles.__main__:main"
simplegit = "atrox3d.simplegit.__main__:main"
